--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
